# -hark

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  PPST.md  PPST_CONSTITUTION.md  README.md  RISK_OFFICER_SLA.md  buffet.md  codex.md  gemini.md  grok.md  grok2.md  grok3.md  grok4.md  pyproject.toml  risk_config.yaml  serenity.md  sharks.md
_legacy/: test_philosophy_links.py
agents/: README.md
analysts/: README.md  _TEMPLATE.md  bayes.md  bear.md  crypto.md  fomquant.md  huang.md  momentum.md  regimequant.md  sam.md  serenity.md  sharks.md  valuation.md  yupupin.md
backtest/: README.md
config/: dna_rules.json  world_events.json  world_exposure.json
crypto/: README.md  cycle-and-institutional.md  dot-postmortem.md  watchlist.yaml
data/: universe_extra.txt
docs/: ARCHITECTURE.md  FULL_CLAUDE_CODEX_GROK_ZELLIJ_TMUX_MULTI_AGENT_EXECUTION_PLAN.md  FULL_CLAUDE_CODEX_GROK_ZELLIJ_TMUX_MULTI_AGENT_EXECUTION_PLAN_zh.md  INSPIRATIONS.md  LLM-BACKTEST-PROTOCOL.md  OPERATING_MANUAL.md  QLIB-VECTORDB-PLAN.md  QUICKSTART_USAGE_zh.md  ROADMAP.md  SAFETY-CHECKLIST.md  data_sources_no_finviz.md  finviz_screening_recipe.md  ipo_wave_dotcom_analog.md  rally_catcher_model.md  regime_breadth_principle.md  shark-next-steps-and-claude-md-improvements.md
harness/: README.md
news/: README.md
outputs/: .gitkeep  _discord-bot.err  api-call-log.jsonl  daily-brief-2026-06-01-discord.txt  daily-brief-2026-06-01-evening-discord.txt  daily-brief-2026-06-01-evening.html  daily-brief-2026-06-01-evening.md  daily-brief-2026-06-01-midday-discord.txt  daily-brief-2026-06-01-midday.html  daily-brief-2026-06-01-midday.md  daily-brief-2026-06-01-morning-discord.txt  daily-brief-2026-06-01-morning.html  daily-brief-2026-06-01-morning.md  daily-brief-2026-06-01.html  daily-brief-2026-06-01.md  daily-brief-2026-06-02-evening-discord.txt  daily-brief-2026-06-02-evening.html  daily-brief-2026-06-02-evening.md  daily-brief-2026-06-03-evening-discord.txt  daily-brief-2026-06-03-evening.html  daily-brief-2026-06-03-evening.md  daily-brief-2026-06-03-morning-discord.txt  daily-brief-2026-06-03-morning.html  daily-brief-2026-06-03-morning.md  daily-brief-2026-06-04-evening-discord.txt  daily-brief-2026-06-04-evening.html  daily-brief-2026-06-04-evening.md  daily-brief-2026-06-04-midday-discord.txt  daily-brief-2026-06-04-midday.html  daily-brief-2026-06-04-midday.md  daily-brief-2026-06-04-morning-discord.txt  daily-brief-2026-06-04-morning.html  daily-brief-2026-06-04-morning.md  daily-brief-2026-06-05-morning-discord.txt  daily-brief-2026-06-05-morning.html  daily-brief-2026-06-05-morning.md  daily-brief-2026-06-07-evening-discord.txt  daily-brief-2026-06-07-evening.html  daily-brief-2026-06-07-evening.md  daily-brief-2026-06-10-evening-discord.txt  (+47 more)
philosophy/: 00-thesis.md  01-time-horizon.md  02-signal-taxonomy.md  03-long-short-taxonomy.md  04-sector-and-finviz.md  09-point-in-time.md  10-strategies.md  11-cloud-local-split.md  index.md  log.md
portfolio/: index.md
raw/: README.md
scripts/: README.md  check_ollama.ps1  cross-review.ps1  crypto_top100.ps1  daily_am.ps1  daily_brief.ps1  daily_pm.ps1  daily_routine.ps1  discord_audit.py  grok-kol-batch.ps1  grok-kol.ps1  igv_software_screen.py  install_autostart.ps1  install_brief_schedule.ps1  install_discord_autostart.ps1  install_dna_schedule.ps1  install_scheduled_tasks.ps1  publish_clean_export.ps1  rag_retriever.py  read_file.ps1  read_file.py  restart_bot.ps1  rf_bayes_valuation.py  run_discord_bot.ps1  setup_local_llm.ps1  tmux-write-loop.sh
(+623 files in other folders)
