[project]
name = "sharks"
version = "0.1.0"
description = "Sharks trading system (Phase 1: scaffold)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Sampras Zheng", email = "sampras2117@gmail.com" }
]
keywords = ["trading", "swing", "llm-wiki", "mag7", "compile-first"]

# Phase 1 dependencies are empty by design. The data clients are stubs that
# raise NotImplementedError until Phase 2 wires real APIs. See docs/ROADMAP.md.
dependencies = []

[project.optional-dependencies]
# Reserved for Phase 2 — uncomment when wiring APIs.
data = [
    # "yfinance",
    # "polygon-api-client",
    # "finnhub-python",
    # "finviz",
    # "ccxt",
    # "python-dotenv",
    # "pyyaml",
]
backtest = [
    # "vectorbt",
    # "pandas",
    # "numpy",
]
dev = [
    "pytest>=7.0",
]
# Discord layer (src/sharks/discord/). Kept optional so the core stays dep-free.
#   uv pip install -e ".[discord]"   (or: uv pip install discord.py python-dotenv)
discord = [
    "discord.py>=2.3",
    "python-dotenv>=1.0",
]
# World model (src/sharks/regime/world_monitor.py) — GSCPI/GPR 皆為 legacy BIFF .xls,
# stdlib 解不了;xlrd 是最小工具(ARCHITECTURE.md 採用準則:先讓需求長到工具的尺寸)。
world = [
    "xlrd>=2.0",
]
# Local web dashboard (src/sharks/ui/server.py) — 專屬 Finviz screener + 調研台.
#   python -m sharks.ui.server  → http://127.0.0.1:8787
ui = [
    "starlette>=0.37",
    "uvicorn>=0.29",
]
# Phase: Akashic memory v3 (docs/QLIB-VECTORDB-PLAN.md). Install when the plan's
# entry criteria are met — NOT by default (heavy deps; qlib Windows support is fragile).
akashic = [
    "chromadb>=0.5",     # 案例向量庫(50+ 案例後啟用;目前特徵質心夠用)
    # "pyqlib>=0.9",     # 因子工廠/回測平台 — 先在 WSL 驗證再解開(Windows 原生編譯易炸)
]

[project.scripts]
sharks = "sharks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sharks"]

[tool.uv]
# uv-managed Python environment

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
